--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "http://example.org/"
+baseURL: "https://blog.ikunal.in"
 languageCode: en-us
 title: K for Kunal | My Pen My Voice
 theme: hugo-PaperMod
