--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,18 +2,16 @@ baseURL: "https://blog.ikunal.in"
 languageCode: en-us
 title: K for Kunal | My Pen My Voice
 theme: ThemeStack
-menu:
-  main:
-    
-    # - identifier: tags
-    #   name: Tags
-    #   url: /tags/
-    #   weight: 30
-    # - identifier: post
-    #   name: Blog Posts
-    #   url: /post/
-    #   weight: 30
-    
+
+params:
+    sidebar:
+        compact: false
+        emoji:
+        subtitle:
+        avatar:
+            enabled: true
+            local: true
+            src: img/logo.png
     
     
 menu:
